<resources>
    <string name="app_name">MenuPrincipal</string>
    <string name="Usuario">Aldhair Jimenez</string>
    <string name="Placas">Lys-6061</string>
    <string name="txt_Notificaciones">¡Notificaciones!</string>
    <string name="txt_config_not">Configurar Notificaciones</string>
    <string name="txt_Dat_per">Datos Personales</string>
    <string name="txt_Cuenta">Cuenta</string>
    <string name="txt_Datos_Medicos">Datos Medicos</string>
    <string name="Titulo_GestNot">Gestión de Notificaciones</string>
    <string name="Fecha_Hora">Fecha y hora</string>
    <string name="txt_Personales">Personales</string>
    <string name="txt_Contactos">Contactos</string>
    <string name="btn_Regresar">Regresar</string>
    <string name="Titulo_InfoNot">Información de Notificación</string>
    <string name="txt_TipoDeEvento">Tipo de evento: </string>
    <string name="txt_FechaEvento">Fecha de evento: </string>
    <string name="txt_FechaNot">Fecha de Notificación: </string>
    <string name="txt_Ubicacion">Ubicación: </string>
    <string name="Gravedad_evento">Alta</string>
    <string name="UbicacionTR">Nicolas Romero</string>
    <string name="Titulo_InfGral">Información General</string>
    <string name="txt_NomAseg">Nombre de la aseguradora: </string>
    <string name="txt_NumTel">Numero de telefono: </string>
    <string name="txt_NoPoliza">No.Poliza: </string>
    <string name="txt_FecVig">Fecha de vigencia</string>
    <string name="Aseguradora">Bancomer Seguros</string>
    <string name="TelefonoAsegu">5544559008</string>
    <string name="NumPoliza">1234567890</string>
    <string name="txt_GPS">GPS: </string>
    <string name="txt_Velo">Velocidad: </string>
    <string name="txt_temp">Temperatura: </string>
    <string name="txt_Giros">Giroscopio: </string>
    <string name="Velocidad">30 km/h</string>
    <string name="Temperatura">33 C</string>
    <string name="Giroscopio">152:152:120</string>
    <string name="Titulo_ConfigNot">Configurar Notificaciones</string>
    <string name="Contacto">Alejandro Jimenez</string>
    <string name="Contacto2">Rocio De Jesus</string>
    <string name="Paux1">Cruz Roja</string>
    <string name="Paux2">Bomberos</string>
    <string name="Paux3">Ambulancia Particular</string>
    <string name="Btn_Listo">¡Listo!</string>
    <string name="Nota_config">Nota:Recuerda que en el aviso de privacidad
    Encontraras a detalle que informacion es la que estas autorizando</string>
    <string name="Reg_Contacto">Registrar Contacto</string>
    <string name="txt_nombre">Nombre : </string>
    <string name="txt_numtel">Numero de telefono : </string>
    <string name="btn_guardar">Guardar</string>
    <string name="txt_Emergencia">Emergencia</string>
    <string name="txt_Asegura">Aseguradora</string>
    <string name="txt_person">Familiar</string>
    <string name="Hint_Nombre">Escribe el nombre</string>
    <string name="Hint_Tel">Escribe el Telefono</string>
    <string name="txt_nom_asegu">Nombre de la aseguradora: </string>
    <string name="txt_No.Poliza">No.Poliza : </string>
    <string name="Hint_No._Pol">Escribe el No. Poliza</string>
    <string name="txt_Fecha_vig">Fecha de Vigencia : </string>
    <string name="hint_Fecha_vig">Fecha de Vigencia </string>
    <string name="txt_Parentezco">Parentezco : </string>
    <string name="hint_parentezco">Hermano/a,Padre/Madre,Otro.</string>
</resources>
